# lion-bluez-inc

./: CMakeLists.txt
binc/: application.c  application.h
examples/peripheral/: peripheral.c
